# vgame

./: README.md  pyproject.toml
examples/: main.py  mysprite.py
src/: framework.py  main.py  mysprite.py
src/graphics/: graphics.py
src/graphics/sprites/: __init__.py  circle.py  human.py  sprite.py
src/vgame/: __init__.py  game.py  keys.py  run.py
src/vgame/graphics/: __init__.py  __main__.py  graphics.py  surface.py
src/vgame/graphics/sprites/: __init__.py  circle.py  group.py  human.py  library.py  sprite.py
vgame/: __init__.py  axis.py  game.py  keys.py  run.py  runner.py  scene.py  singleton.py
vgame/graphics/: __init__.py  graphics.py
vgame/graphics/sprites/: __init__.py  group.py  library.py  sprite.py  texture.py  types.py  typing.py
