[tool.poetry]
name = "vgame"
version = "0.1.0"
description = ""
authors = ["Vlad <89295404+Virashu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"

[tool.pylint.main]
extension-pkg-whitelist = "pygame"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
